# tb4_rectangle_patrol_ws

./: .gitignore  README.md
src/tb4_rectangle_patrol/: package.xml  setup.cfg  setup.py
src/tb4_rectangle_patrol/config/: nav2_rectangle.yaml  rectangle_patrol.yaml
src/tb4_rectangle_patrol/launch/: rectangle_patrol_bringup.launch.py  rectangle_turtlebot4_spawn.launch.py
src/tb4_rectangle_patrol/maps/: rectangle_2m_x_1_5m.pgm  rectangle_2m_x_1_5m.yaml
src/tb4_rectangle_patrol/rviz/: rectangle_patrol.rviz
src/tb4_rectangle_patrol/tb4_rectangle_patrol/: initial_pose_publisher.py  map_bounds.py  rectangle_geometry.py  rectangle_patrol_node.py  sim_ready.py
src/tb4_rectangle_patrol/test/: test_rectangle_geometry.py  test_rviz_config.py  test_slam_bringup_launch.py  test_static_map_assets.py
src/tb4_rectangle_patrol/worlds/: rectangle_2m_x_1_5m.sdf
